# serializer version: 1
# name: TestPatternCriterion.test_filter_entity_level[event-pattern0]
  '''
  patient_id,date,event_type,provider
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  2,2023-09-21,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-28,EMERGENCY,RADIOLOGIST
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-10-16,EMERGENCY,LABORATORY
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-12-12,EMERGENCY,NURSE
  8,2023-09-21,EMERGENCY,
  8,2023-11-13,EMERGENCY,
  10,2023-05-07,EMERGENCY,SPECIALIST
  10,2023-06-10,EMERGENCY,SPECIALIST
  
  '''
# ---
# name: TestPatternCriterion.test_filter_entity_level[interval-pattern1]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  4,2023-05-25,2023-06-21,ANTIBIOTIC,ORAL,3
  5,2023-09-06,2023-09-18,ANTIBIOTIC,CUTANEOUS,2
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  
  '''
# ---
# name: TestPatternCriterion.test_filter_entity_level_inplace[event-pattern0]
  '''
  patient_id,date,event_type,provider
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  2,2023-09-21,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-28,EMERGENCY,RADIOLOGIST
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-10-16,EMERGENCY,LABORATORY
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-12-12,EMERGENCY,NURSE
  8,2023-09-21,EMERGENCY,
  8,2023-11-13,EMERGENCY,
  10,2023-05-07,EMERGENCY,SPECIALIST
  10,2023-06-10,EMERGENCY,SPECIALIST
  
  '''
# ---
# name: TestPatternCriterion.test_filter_entity_level_inplace[interval-pattern1]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  4,2023-05-25,2023-06-21,ANTIBIOTIC,ORAL,3
  5,2023-09-06,2023-09-18,ANTIBIOTIC,CUTANEOUS,2
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level[event-pattern0]
  '''
  patient_id,date,event_type,provider
  3,2023-01-28,CONSULTATION,RADIOLOGIST
  3,2023-02-02,FOLLOW_UP,NURSE
  3,2023-02-10,FOLLOW_UP,LABORATORY
  3,2023-03-06,CONSULTATION,
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-08-15,FOLLOW_UP,NURSE
  3,2023-08-19,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,VACCINATION,RADIOLOGIST
  3,2023-09-14,FOLLOW_UP,SPECIALIST
  3,2023-10-16,EMERGENCY,LABORATORY
  3,2023-12-10,CONSULTATION,RADIOLOGIST
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,CONSULTATION,SPECIALIST
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-05-08,EXAM,
  6,2023-05-28,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,EXAM,
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-09-16,VACCINATION,RADIOLOGIST
  6,2023-09-20,VACCINATION,SPECIALIST
  6,2023-09-24,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,VACCINATION,LABORATORY
  6,2023-12-12,EMERGENCY,NURSE
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level[event-pattern0].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  3,M,22,MIXED,False
  5,M,35,MIXED,False
  6,F,68,PUBLIC,False
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level[interval-pattern2]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-01-10,2023-02-09,PAIN_RELIEVER,,1
  2,2023-02-04,2023-02-16,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-08,2023-08-30,ANTIHYPERTENSIVE,INHALATION,2
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  3,2023-09-24,2023-10-21,PAIN_RELIEVER,ORAL,2
  3,2023-10-10,2023-11-02,ANTIHYPERTENSIVE,ORAL,2
  5,2023-02-23,2023-03-13,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,2023-03-07,2023-03-24,CORTICOSTEROID,CUTANEOUS,2
  5,2023-04-22,2023-05-13,ANTIHYPERTENSIVE,INHALATION,2
  5,2023-09-04,2023-09-20,CORTICOSTEROID,,1
  5,2023-09-06,2023-09-18,ANTIBIOTIC,CUTANEOUS,2
  5,2023-10-21,2023-11-14,PAIN_RELIEVER,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-07-31,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level[interval-pattern2].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  2,M,31,PRIVATE,False
  3,M,22,MIXED,False
  5,M,35,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level[state-pattern1]
  '''
  patient_id,start_date,end_date,health_state,condition
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level[state-pattern1].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  6,F,68,PUBLIC,False
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level_inplace[event-pattern0]
  '''
  patient_id,date,event_type,provider
  3,2023-01-28,CONSULTATION,RADIOLOGIST
  3,2023-02-02,FOLLOW_UP,NURSE
  3,2023-02-10,FOLLOW_UP,LABORATORY
  3,2023-03-06,CONSULTATION,
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-08-15,FOLLOW_UP,NURSE
  3,2023-08-19,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,VACCINATION,RADIOLOGIST
  3,2023-09-14,FOLLOW_UP,SPECIALIST
  3,2023-10-16,EMERGENCY,LABORATORY
  3,2023-12-10,CONSULTATION,RADIOLOGIST
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,CONSULTATION,SPECIALIST
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-05-08,EXAM,
  6,2023-05-28,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,EXAM,
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-09-16,VACCINATION,RADIOLOGIST
  6,2023-09-20,VACCINATION,SPECIALIST
  6,2023-09-24,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,VACCINATION,LABORATORY
  6,2023-12-12,EMERGENCY,NURSE
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level_inplace[event-pattern0].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  3,M,22,MIXED,False
  5,M,35,MIXED,False
  6,F,68,PUBLIC,False
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level_inplace[interval-pattern2]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-01-10,2023-02-09,PAIN_RELIEVER,,1
  2,2023-02-04,2023-02-16,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-08,2023-08-30,ANTIHYPERTENSIVE,INHALATION,2
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  3,2023-09-24,2023-10-21,PAIN_RELIEVER,ORAL,2
  3,2023-10-10,2023-11-02,ANTIHYPERTENSIVE,ORAL,2
  5,2023-02-23,2023-03-13,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,2023-03-07,2023-03-24,CORTICOSTEROID,CUTANEOUS,2
  5,2023-04-22,2023-05-13,ANTIHYPERTENSIVE,INHALATION,2
  5,2023-09-04,2023-09-20,CORTICOSTEROID,,1
  5,2023-09-06,2023-09-18,ANTIBIOTIC,CUTANEOUS,2
  5,2023-10-21,2023-11-14,PAIN_RELIEVER,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-07-31,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level_inplace[interval-pattern2].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  2,M,31,PRIVATE,False
  3,M,22,MIXED,False
  5,M,35,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level_inplace[state-pattern1]
  '''
  patient_id,start_date,end_date,health_state,condition
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  
  '''
# ---
# name: TestPatternCriterion.test_filter_sequence_level_inplace[state-pattern1].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  6,F,68,PUBLIC,False
  
  '''
# ---
# name: TestPatternCriterion.test_which_pattern_criterion[event-pattern0]
  list([
    3,
    5,
    6,
  ])
# ---
# name: TestPatternCriterion.test_which_pattern_criterion[interval-pattern2]
  list([
    2,
    3,
    5,
    8,
    9,
  ])
# ---
# name: TestPatternCriterion.test_which_pattern_criterion[state-pattern1]
  list([
    6,
  ])
# ---
